product & shop pages styling

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -16,7 +16,12 @@
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item" id="home">Home</a>
+                    <a class="navbar-item" id="home" style="display: flex;">
+                        <span class="icon">
+                            <i class="fas fa-home"></i>
+                        </span>
+                        <p>Home</p>
+                    </a>
                     <a class="navbar-item" id="manageProduit">Gérer Produits</a>
                     <a class="navbar-item" id="manageShop">Gérer Magasins</a>
                     <div class="navbar-item has-dropdown is-hoverable">
@@ -52,6 +57,7 @@
             </div>
         </nav>
     </header>
+    <hr style="margin: 0;">
     <!--<figure class="image is-64x64">
 
     </figure>-->
