--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -1,5 +1,4 @@
 <template name="home">
-    <!-- Il s'agit de notre introduction qui est à compléter  -->
     <p>
         EKOTOPIA est une plateforme reposant sur un système participatif où les utilisateurs peuvent acheter et proposer des produits dans le commerce à proximité de chez eux. Cela permet aux client de réduire leur impact en dioxyde de carbone... A COMPLETER
         <br>
@@ -10,7 +9,7 @@
     <form id="searchForm">
         <div class="field has-addons">
             <div class="control">
-                <input type="search" class="input is-rounded" id="searchBox"/>
+                <input type="search" class="input is-rounded" id="searchBox" placeholder="Rechercher"/>
             </div>
             <div class="control">
                 <button type="submit" class="button is-rounded">
