--- a/TFC/imports/UI/searchResults.html
+++ b/TFC/imports/UI/searchResults.html
@@ -2,7 +2,7 @@
     <form id="searchForm">
         <div class="field has-addons">
             <div class="control">
-                <input type="search" class="input is-rounded" id="searchBox" value="{{getSearchQuery}}"/>
+                <input type="search" class="input is-rounded" id="searchBox" placeholder="Rechercher" value="{{getSearchQuery}}"/>
             </div>
             <div class="control">
                 <button type="submit" class="button is-rounded">
