--- a/TFC/imports/UI/user/editProfile.html
+++ b/TFC/imports/UI/user/editProfile.html
@@ -24,15 +24,16 @@
         </p>
         <br><br>
         <label for="profilePictureFile">Changer de photo de profil :</label>
-        <div class="file is-medium">
+        <div class="file has-name is-boxed">
             <label class="file-label">
-                <input class="file-input" type="file" name="profilePictureFile">
+                <input class="file-input" type="file" name="profilePictureFile" id="profilePictureFile">
                 <span class="file-cta">
                     <span class="file-icon">
                         <i class="fas fa-file-image"></i>
                     </span>
                     <span class="file-label">Choisir un fichier…</span>
                 </span>
+                <span class="file-name"><center>Aucun fichier sélectionné</center></span>
             </label>
         </div>
         <br><br>
