--- a/TFC/imports/UI/shopPage.html
+++ b/TFC/imports/UI/shopPage.html
@@ -6,19 +6,43 @@
 
 
 <template name="displayedShopPage">
-    <button class="button">Retour aux résultats</button>
-    <h3 class="title">{{name}}</h3>
-    <p>{{description}}</p>
-    <button class="button"> Partager la page du magasin sur les réseaux sociaux</button>
-    <button class="button">Lien vers le site du magasin</button>
-    {{#if currentUser}}
-        <!-- Diplay favorites options only if the user is logged-->
-        {{#if shopInFavorites _id}}
-            <!-- The shop is already in favorites, suggest to remove it -->
-            <img src="heartFilled.png" alt="" id="removeFromFavoriteShops" style="width: 100px; display:inherit;"/>
-        {{else}}
-            <!-- The shop is not in favorites, suggest to add it -->
-            <img src="heartEmpty.png" alt="" id="addToFavoriteShops" style="width: 100px; display:inherit;"/>
-        {{/if}}
-    {{/if}}
+
+    <div class="card" style="width: fit-content;">
+        <header class="card-header">
+            <div class="card-header-icon">
+                <span class="icon"><i class="fas fa-reply"></i></span>
+                <p>Retour</p>
+            </div>
+            <p class="card-header-title is-centered title is-3" style="margin-bottom: 0;">
+                {{name}}
+            </p>
+            <div class="card-header-icon">
+                {{#if currentUser}}
+                    <!-- Diplay favorites options only if the user is logged-->
+                    {{#if shopInFavorites _id}}
+                        <!-- Product is already in the favorites, suggest to remove it -->
+                        <span class="icon" id="removeFromFavoriteShops"><i class="fas fa-heart" style="color: green;"></i></span>
+                    {{else}}
+                        <!-- Product is not in the favorites, suggest to add it -->
+                        <span class="icon" id="addToFavoriteShops"><i class="far fa-heart"></i></span>
+                    {{/if}}
+                {{/if}}
+            </div>
+        </header>
+        <div class="card-image">
+            <figure class="image">
+                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+            </figure>
+        </div>
+        <div class="card-content">
+            <div class="content">
+                <p>
+                    Description : {{description}}
+                </p>
+                <button class="button"> Partager la page du produit sur les réseaux sociaux</button>
+                <button class="button">Lien vers la page du magasin / site</button>
+            </div>
+        </div>
+    </div>
+
 </template>
