--- a/TFC/imports/UI/shopPage.html
+++ b/TFC/imports/UI/shopPage.html
@@ -21,10 +21,10 @@
                     <!-- Diplay favorites options only if the user is logged-->
                     {{#if shopInFavorites _id}}
                         <!-- Product is already in the favorites, suggest to remove it -->
-                        <span class="icon" id="removeFromFavoriteShops"><i class="fas fa-heart" style="color: green;"></i></span>
+                        <span class="icon" id="removeFromFavoriteShops"><i class="fas fa-bookmark" style="color: green;"></i></span>
                     {{else}}
                         <!-- Product is not in the favorites, suggest to add it -->
-                        <span class="icon" id="addToFavoriteShops"><i class="far fa-heart"></i></span>
+                        <span class="icon" id="addToFavoriteShops"><i class="far fa-bookmark"></i></span>
                     {{/if}}
                 {{/if}}
             </div>
