--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -18,9 +18,58 @@
             </div>
         </div>
     </form>
-    <h4 class="title">Magasins en vogue</h4>
-    <h4 class="title">Produits en vogue</h4>
-    <h4 class="title">Autour de moi</h4>
+
+    <br>
+
+    <div class="columns">
+        <div class="column">
+            <div class="tile is-ancestor">
+                <div class="tile">
+                    <div class="tile is-parent">
+                        <article class="tile is-child notification is-info">
+                            <p class="title">Magasins en vogue</p>
+                            <p class="subtitle">With an image</p>
+                            <figure class="image is-4by3">
+                                <img src="https://bulma.io/images/placeholders/640x480.png">
+                            </figure>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <div class="tile is-ancestor">
+                <div class="tile">
+                    <div class="tile is-parent">
+                        <article class="tile is-child notification is-info">
+                            <p class="title">Produits en vogue</p>
+                            <p class="subtitle">With an image</p>
+                            <figure class="image is-4by3">
+                                <img src="https://bulma.io/images/placeholders/640x480.png">
+                            </figure>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <div class="tile is-ancestor">
+                <div class="tile">
+                    <div class="tile is-parent">
+                        <article class="tile is-child notification is-info">
+                            <p class="title">Autour de moi</p>
+                            <p class="subtitle">With an image</p>
+                            <figure class="image is-4by3">
+                                <img src="https://bulma.io/images/placeholders/640x480.png">
+                            </figure>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <br>
 
     {{#if currentUser}}
