--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -4,7 +4,7 @@
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="https://bulma.io">
-                    <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+                    <img src="https://bulma.io/images/bulma-logo.png">
                 </a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -16,7 +16,7 @@
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item" id="home" style="display: flex;">
+                    <a class="navbar-item" id="home">
                         <span class="icon">
                             <i class="fas fa-home"></i>
                         </span>
