--- a/TFC/imports/UI/user/editProfile.html
+++ b/TFC/imports/UI/user/editProfile.html
@@ -26,7 +26,7 @@
         <label for="profilePictureFile">Changer de photo de profil :</label>
         <div class="file has-name is-boxed">
             <label class="file-label">
-                <input class="file-input" type="file" name="profilePictureFile" id="profilePictureFile">
+                <input class="file-input" type="file" name="profilePictureFile" id="profilePictureFile" accept="image/*">
                 <span class="file-cta">
                     <span class="file-icon">
                         <i class="fas fa-file-image"></i>
