--- a/TFC/imports/UI/messages/header.html
+++ b/TFC/imports/UI/messages/header.html
@@ -1,7 +1,7 @@
-<template name="accountCreated">
-    <article class="message is-success">
+<template name="header">
+    <article class="message {{style}}">
         <div class="message-header">
-            <p>Votre compte a bien été créé</p>
+            <p>{{headerContent}}</p>
             <button class="delete" aria-label="delete"></button>
         </div>
     </article>
