--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -1,6 +1,6 @@
 <template name="home">
     <p>
-        EKOTOPIA est une plateforme reposant sur un système participatif où les utilisateurs peuvent acheter et proposer des produits dans le commerce à proximité de chez eux. Cela permet aux client de réduire leur impact en dioxyde de carbone... A COMPLETER
+         Bonjour bienvenue sur EKOTOPIA, il s'agit d'une plateforme reposant sur un système participatif où les utilisateurs peuvent acheter et proposer des produits dans le commerce à proximité de chez eux. Cela permet aux client de réduire leur impact en dioxyde de carbone et ainsi d'acheter des produits de façon plus durable pour l'environnement.
         <br>
         Nous comptons actuellement {{productsCounter}} produits dans notre base de données.<br>
         Nous comptons actuellement {{shopsCounter}} magasins dans notre base de données.
