--- a/TFC/imports/UI/user/editProfile.html
+++ b/TFC/imports/UI/user/editProfile.html
@@ -33,7 +33,7 @@
                     </span>
                     <span class="file-label">Choisir un fichier…</span>
                 </span>
-                <span class="file-name"><center>Aucun fichier sélectionné</center></span>
+                <span class="file-name" style="text-align: center;">Aucun fichier sélectionné</span>
             </label>
         </div>
         <br><br>
