--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -18,7 +18,7 @@
             <div class="card-header-icon">
                 {{#if currentUser}}
                     <!-- Diplay favorites options only if the user is logged-->
-                    {{#if productInFavorites _id}}
+                    {{#if productInFavorites}}
                         <!-- Product is already in the favorites, suggest to remove it -->
                         <span class="icon" id="removeFromFavoriteProducts"><i class="fas fa-bookmark" style="color: green;"></i></span>
                     {{else}}
@@ -29,16 +29,16 @@
             </div>
         </header>
         <div class="card-image">
-            <figure class="image">
-                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-            </figure>
+            {{#each displayProductImages}}
+                <img src="{{this.url}}" alt="Image du produit"/>
+            {{/each}}
         </div>
         <div class="card-content">
             <div class="content">
                 <p>
                     Description : {{description}}
                 </p>
-                <button class="button"> Partager la page du produit sur les réseaux sociaux</button>
+                <button class="button">Partager la page du produit sur les réseaux sociaux</button>
                 <button class="button">Lien vers la page du magasin / site</button>
             </div>
         </div>
