--- a/TFC/imports/UI/shopPage.html
+++ b/TFC/imports/UI/shopPage.html
@@ -30,9 +30,9 @@
             </div>
         </header>
         <div class="card-image">
-            <figure class="image">
-                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-            </figure>
+            {{#each displayShopImages}}
+                <img src="{{this.url}}" alt="Image du produit"/>
+            {{/each}}
         </div>
         <div class="card-content">
             <div class="content">
