products & shops images styling

--- a/TFC/imports/UI/shopPage.html
+++ b/TFC/imports/UI/shopPage.html
@@ -29,10 +29,46 @@
                 {{/if}}
             </div>
         </header>
+        <br>
         <div class="card-image">
-            {{#each displayShopImages}}
-                <img src="{{this.url}}" alt="Image du produit"/>
-            {{/each}}
+            <div class="slideshow">
+                {{#each displayShopImages}}
+                    <div class="slide">
+                        <img src="{{this.url}}" alt="Image du magasin"/>
+                    </div>
+                {{/each}}
+                <a class="previous" onclick="changeSlide(-1)">&#10094;</a>
+                <a class="next" onclick="changeSlide(1)">&#10095;</a>
+                <script>
+                    // Slideshow script
+
+                    // Showing the first image by default
+                    var slideIndex = 1;
+                    showSlide(slideIndex);
+
+                    function changeSlide(number){
+                        // If number is 1 it will show next slide, if it's -1 it will show the previous
+                        showSlide(slideIndex += number);
+                    }
+
+                    function showSlide(number) {
+                        var slides = document.getElementsByClassName("slide");
+                        if(number > slides.length){
+                            // User pressed next button in last slide, comming back to the first slide)
+                            slideIndex = 1;
+                        } else if(number < 1){
+                            // User pressed previous button in first slide, going to the last slide
+                            slideIndex = slides.length;
+                        }
+                        for(var i = 0; i < slides.length; i++){
+                            // Hide all the slides
+                            slides[i].style.display = "none";
+                        }
+                        // Showing the desired slide (index starts at 0 so it's the index-1 slide)
+                        slides[slideIndex-1].style.display = "block";
+                    }
+                </script>
+            </div>
         </div>
         <div class="card-content">
             <div class="content">
