--- a/TFC/imports/UI/shopBanner.html
+++ b/TFC/imports/UI/shopBanner.html
@@ -5,8 +5,10 @@
         </div>
         <div class="message-body">
             <div class="field has-addons">
-                <figure class="image is-128x128">
-                    <img src="https://bulma.io/images/placeholders/128x128.png">
+                <figure class="image is-150x150">
+                    {{#each displayShopFirstImage _id}}
+                        <img src="{{this.url}}" alt="Image du magasin"/>
+                    {{/each}}
                 </figure>
                 <p>
                     Description : {{description}}
