text and file inputs checking

--- a/TFC/imports/UI/shopBanner.html
+++ b/TFC/imports/UI/shopBanner.html
@@ -10,9 +10,7 @@
                         <img src="{{this.url}}" alt="Image du magasin"/>
                     {{/each}}
                 </figure>
-                <p>
-                    Description : {{description}}
-                </p>
+                <p id="description">{{description}}</p>
             </div>
         </div>
     </article>
