--- a/TFC/imports/UI/productBanner.html
+++ b/TFC/imports/UI/productBanner.html
@@ -10,7 +10,7 @@
                         <img src="{{this.url}}" alt="Image du produit"/>
                     {{/each}}
                 </figure>
-                <p>Description : {{description}}</p>
+                <p id="description">{{description}}</p>
             </div>
         </div>
     </article>
