Up and down votes

--- a/TFC/imports/UI/shopBanner.html
+++ b/TFC/imports/UI/shopBanner.html
@@ -2,6 +2,7 @@
     <article class="message is-info shopBanner" id="{{_id}}">
         <div class="message-header">
             <p>{{name}} ({{_id}})</p>
+            <p>{{score}}</p>
         </div>
         <div class="message-body">
             <div class="field has-addons">
