--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -6,6 +6,11 @@
 
 
 <template name="displayedProductPage">
+    <style>
+        .green{
+            color: green;
+        }
+    </style>
 
     <div class="card" style="width: fit-content;">
         <header class="card-header">
@@ -78,6 +83,20 @@
                 <p>
                     Description : {{description}}
                 </p>
+                {{score}}
+                {{#if currentUser}}
+                    <div class="productVote" id="upvote">
+                        <span class="icon">
+                            <i class="fas fa-angle-up"></i>
+                        </span>
+                    </div>
+                    <div class="productVote" id="downvote">
+                        <span class="icon">
+                            <i class="fas fa-angle-down"></i>
+                        </span>
+                    </div>
+                {{/if}}
+
                 <button class="button">Partager la page du produit sur les réseaux sociaux</button>
                 <button class="button">Lien vers la page du magasin / site</button>
             </div>
