--- a/TFC/imports/UI/user/register.html
+++ b/TFC/imports/UI/user/register.html
@@ -8,7 +8,7 @@
             </span>
         </p>
         <p class="control has-icons-left">
-            <input type="email" class="input" name="email" placeholder="Email" required>
+            <input type="email" class="input" name="email" id="email" placeholder="Email" required>
             <span class="icon is-left">
                 <i class="fas fa-envelope"></i>
             </span>
