bug fixing and refactoring

--- a/TFC/imports/UI/user/forgotPassword.html
+++ b/TFC/imports/UI/user/forgotPassword.html
@@ -1,9 +1,8 @@
 <template name="forgotPassword">
     <h2 class="title">Mot de passe oublié</h2>
     <form id="forgotPassword">
-        <label for="email">Email:</label>
         <p class="control has-icons-left">
-            <input type="email" class="input" name="email" required>
+            <input type="email" class="input" name="email" placeholder="Email" required>
             <span class="icon is-left">
                 <i class="fas fa-envelope"></i>
             </span>
