add buttons removed

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -22,8 +22,8 @@
                         </span>
                         <p>Home</p>
                     </a>
-                    <a class="navbar-item" id="manageProduit">Gérer Produits</a>
-                    <a class="navbar-item" id="manageShop">Gérer Magasins</a>
+                    <a class="navbar-item" id="addProduct">Ajouter un produit</a>
+                    <a class="navbar-item" id="addShop">Ajouter un magasin</a>
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link">More</a>
                         <div class="navbar-dropdown">
