--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -70,4 +70,7 @@
 
     {{> Template.dynamic template=currentMessage}}
     {{> Template.dynamic template=currentPage}} <!-- Affichage du template dynamique -->
+
+    <footer class="footer">
+    </footer>
 </body>
