--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -1,4 +1,5 @@
 <body>
+    <div id="content-wrap">
     <header>
         <!-- Elements de l'en-tête -->
         <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -71,6 +72,15 @@
     {{> Template.dynamic template=currentMessage}}
     {{> Template.dynamic template=currentPage}} <!-- Affichage du template dynamique -->
 
+
+    </div>
     <footer class="footer">
+        <p>Suivez-nous sur</p>
+        <span class="icon is-medium">
+            <img src="instagram.svg" alt="">
+        </span>
+        <span class="icon is-medium">
+            <img src="twitter.svg" alt="">
+        </span>
     </footer>
 </body>
