--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -6,7 +6,7 @@
                 <p class="subtitle">PHRASE D'ACCROCHE SIMPLE ET COURTE</p>
                 <form id="searchForm">
                     <div class="field has-addons" style="justify-content: center;">
-                        <div class="control">
+                        <div class="control" style="width: 25em; max-width: 100%;">
                             <input type="search" class="input is-rounded" id="searchBox" placeholder="Rechercher"/>
                         </div>
                         <div class="control">
@@ -33,46 +33,40 @@
     <div class="columns">
         <div class="column">
             <div class="tile is-ancestor">
-                <div class="tile">
-                    <div class="tile is-parent">
-                        <article class="tile is-child notification is-info">
-                            <p class="title">Magasins en vogue</p>
-                            <p class="subtitle">With an image</p>
-                            <figure class="image is-4by3">
-                                <img src="https://bulma.io/images/placeholders/640x480.png">
-                            </figure>
-                        </article>
-                    </div>
+                <div class="tile is-parent">
+                    <article class="tile is-child notification is-info">
+                        <p class="title">Magasins en vogue</p>
+                        <p class="subtitle">With an image</p>
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                        </figure>
+                    </article>
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="tile is-ancestor">
-                <div class="tile">
-                    <div class="tile is-parent">
-                        <article class="tile is-child notification is-info">
-                            <p class="title">Produits en vogue</p>
-                            <p class="subtitle">With an image</p>
-                            <figure class="image is-4by3">
-                                <img src="https://bulma.io/images/placeholders/640x480.png">
-                            </figure>
-                        </article>
-                    </div>
+                <div class="tile is-parent">
+                    <article class="tile is-child notification is-info">
+                        <p class="title">Produits en vogue</p>
+                        <p class="subtitle">With an image</p>
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                        </figure>
+                    </article>
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="tile is-ancestor">
-                <div class="tile">
-                    <div class="tile is-parent">
-                        <article class="tile is-child notification is-info">
-                            <p class="title">Autour de moi</p>
-                            <p class="subtitle">With an image</p>
-                            <figure class="image is-4by3">
-                                <img src="https://bulma.io/images/placeholders/640x480.png">
-                            </figure>
-                        </article>
-                    </div>
+                <div class="tile is-parent">
+                    <article class="tile is-child notification is-info">
+                        <p class="title">Autour de moi</p>
+                        <p class="subtitle">With an image</p>
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                        </figure>
+                    </article>
                 </div>
             </div>
         </div>
