--- a/TFC/imports/UI/manageProduct.html
+++ b/TFC/imports/UI/manageProduct.html
@@ -1,9 +1,11 @@
 <template name="manageProduct">
     <h3 class="title">Ajouter un produit</h3>
     <form id="newProduct">
+
         <input name="productName" type="text" placeholder="Nom du produit" class="input" required>
+
         <input name="productDescription" type="textarea" placeholder="Description du produit" class="input" required>
-        <label for="productPictures">Images :</label>
+        
         <div class="file has-name is-boxed">
             <label class="file-label">
                 <input class="file-input" type="file" name="productPictures" id="productPictures" accept="image/*" multiple>
@@ -16,6 +18,16 @@
                 <span class="file-name" style="text-align: center;">Aucun fichier sélectionné</span>
             </label>
         </div>
+
+        <div>
+            <input type="checkbox" class="checkbox" id="cat1" name="category" value="1">
+            <label for="cat1">Catégorie 1</label>
+            <input type="checkbox" class="checkbox" id="cat2" name="category" value="2">
+            <label for="cat2">Catégorie 2</label>
+            <input type="checkbox" class="checkbox" id="cat3" name="category" value="3">
+            <label for="cat3">Catégorie 3</label>
+        </div>
+
         <button id="addProduct" type="submit" class="button">Ajouter le produit !</button>
     </form>
     <br>
