--- a/TFC/imports/UI/manageShop.html
+++ b/TFC/imports/UI/manageShop.html
@@ -18,6 +18,15 @@
             </label>
         </div>
 
+        <div>
+            <input type="checkbox" class="checkbox" id="cat1" name="category" value="1">
+            <label for="cat1">Catégorie 1</label>
+            <input type="checkbox" class="checkbox" id="cat2" name="category" value="2">
+            <label for="cat2">Catégorie 2</label>
+            <input type="checkbox" class="checkbox" id="cat3" name="category" value="3">
+            <label for="cat3">Catégorie 3</label>
+        </div>
+
         <button id="addShop" type="submit" class="button">Ajouter le masgasin !</button>
     </form>
     <br>
