--- a/TFC/imports/UI/productBanner.html
+++ b/TFC/imports/UI/productBanner.html
@@ -13,6 +13,13 @@
                 </figure>
                 <p id="description">{{description}}</p>
             </div>
+
+            <div class="tags">
+            {{#each displayProductCategories _id}}
+                <span class="tag is-link">{{this}}</span>
+            {{/each}}
+            </div>
+
         </div>
     </article>
 </template>
