--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -97,6 +97,12 @@
                     </div>
                 {{/if}}
 
+                <div class="tags">
+                {{#each displayProductCategories _id}}
+                    <span class="tag is-link">{{this}}</span>
+                {{/each}}
+                </div>
+
                 <button class="button">Partager la page du produit sur les réseaux sociaux</button>
                 <button class="button">Lien vers la page du magasin / site</button>
             </div>
