--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -103,8 +103,27 @@
 
     </div>
     <footer class="footer">
-        <div class="columns" style="height: 100%">
+        <div class="columns has-text-centered" style="height: 100%">
+
             <div class="column">
+                <div class="columns is-mobile">
+                    <div class="column" style="background-color: #f3f3f3;">
+                        <ul>
+                            <li>Crédits</li>
+                            <li>FAQ</li>
+                        </ul>
+                    </div>
+
+                    <div class="column" style="background-color: #f3f3f3;">
+                        <ul>
+                            <li>blabla</li>
+                            <li>blabla</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column" style="background-color: #f3f3f3;">
                 <p>Réseaux sociaux</p>
                 <span class="icon is-medium">
                     <img src="instagram.svg" alt="">
@@ -116,12 +135,14 @@
                     <img src="linkedin.svg" alt="">
                 </span>
             </div>
-            <div class="column">
+
+            <div class="column" style="background-color: #f3f3f3;">
                 <ul>
                     <li><img src="GooglePlayBadge.png" width="126px" height="39px" alt="Disponible sur Google Play"></li>
                     <li><img src="AppStoreBadge.svg" alt="Télécharger dans l'App Store"></li>
                 </ul>
             </div>
+
         </div>
     </footer>
 </body>
